--- a/about.qmd
+++ b/about.qmd
@@ -1,6 +1,8 @@
 ---
-title: "Virtuelle Akademie"
+# title: "Virtuelle Akademie"
 image: profile.jpg
+image: "assets/logo.png"
+
 about:
   template: jolla
   links:
