--- a/index.qmd
+++ b/index.qmd
@@ -1,14 +1,53 @@
 ---
 title: "virtuelleakademie"
-listing:
-  contents: posts
-  sort: "date desc"
-  type: default
-  categories: true
-  sort-ui: true
-  filter-ui: true
 page-layout: full
 title-block-banner: true
 ---
+
+## Welcome to Virtuelle Akademie
+
+A modern academic platform combining innovative teaching and cutting-edge research.
+
+::: {.grid}
+
+::: {.g-col-12 .g-col-md-6}
+### [Teaching](teaching/)
+Explore courses, teaching philosophy, and educational resources designed to foster learning and engagement.
+
+- Current Courses
+- Teaching Philosophy  
+- Student Resources
+- Educational Materials
+:::
+
+::: {.g-col-12 .g-col-md-6}
+### [Research](research/)
+Discover ongoing projects, publications, and collaborative research initiatives pushing the boundaries of knowledge.
+
+- Current Projects
+- Publications
+- Collaborations
+- Research Networks
+:::
+
+:::
+
+## Latest Updates
+
+::: {#blog-listing}
+:::
+
+```{=html}
+<div id="blog-listing">
+```
+
+```{ojs}
+//| echo: false
+posts = FileAttachment("posts/_metadata.yml")
+```
+
+```{=html}
+</div>
+```
 
 
