--- a/index.qmd
+++ b/index.qmd
@@ -42,6 +42,6 @@ Discover ongoing projects, publications, and collaborative research initiatives 
 
 ::: -->
 
-## Latest Posts
+<!-- ## Latest Posts -->
 
 
